Website Landing Page

--- a/src/layouts/partials/PostSidebar.astro
+++ b/src/layouts/partials/PostSidebar.astro
@@ -5,9 +5,35 @@ const { tags, categories, allCategories } = Astro.props;
 ---
 
 <div class="lg:col-4">
-  <!-- categories -->
+  <!-- Kategori -->
   <div class="mb-8">
-    <h5 class="mb-6">Categories</h5>
+    <h5 class="mb-6 text-center">Sambutan Kepala Madrasah</h5>
+    <div class="rounded bg-theme-light p-8 dark:bg-darkmode-theme-light">
+      <ul class="space-y-4">
+        <img src="/images/kepala-madrasah.jpg" width="100%" class="rounded-lg" />
+        <li class="text-justify">
+          Puji syukur Alhamdulillah selalu kita panjatkan kepada Ilahi Robbi
+          atas segala nikmat dan karunia-Nya. Dalam kehidupan, kebutuhan akan
+          informasi adalah salah satu hal yang sangat penting. MTs Negeri 1
+          Pandeglang sebagai lembaga pendidikan memiliki tugas dan tanggung
+          jawab untuk mendidik generasi muda yang berkualitas dan tanggap
+          terhadap perkembangan ilmu pengetahuan dan teknologi di era
+          globalisasi ini. Internet menjadi jendela utama untuk melihat dunia.
+          MTs Negeri 1 Pandeglang telah memiliki fasilitas ini, oleh karena itu
+          kami akan menampilkan segala yang ada dan terjadi di lembaga kami,
+          sehingga dunia dapat melihat kondisi, kegiatan prestasi, dan kemajuan
+          yang ada di sini. Kami sangat mengharapkan kritik dan saran dari
+          berbagai pihak demi kebaikan dan kemajuan MTs Negeri 1 Pandeglang.
+          Untuk seluruh civitas akademika, mari kita bersama-sama ukir prestasi
+          demi kejayaan sekolah kita. Amin...
+        </li>
+        <li class="text-center"><b>H. Eman Sulaiman, S.Ag., M.Pd.</b></li>
+      </ul>
+    </div>
+  </div>
+  <!-- Kategori -->
+  <div class="mb-8">
+    <h5 class="mb-6">Kategori</h5>
     <div class="rounded bg-theme-light p-8 dark:bg-darkmode-theme-light">
       <ul class="space-y-4">
         {
@@ -30,9 +56,9 @@ const { tags, categories, allCategories } = Astro.props;
       </ul>
     </div>
   </div>
-  <!-- tags -->
+  <!-- Tagar -->
   <div class="mb-8">
-    <h5 class="mb-6">Tags</h5>
+    <h5 class="mb-6">Tagar</h5>
     <div class="rounded bg-theme-light p-6 dark:bg-darkmode-theme-light">
       <ul>
         {
